// Copyright 2018 The Bazel Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package blaze;

// option java_api_version = 2;

option java_package = "com.google.devtools.intellij.aspect";

message ArtifactLocation {
  string relative_path = 2;
  bool is_source = 3;

  // path from the execution root to the actual root:
  // exec_root + root_execution_path_fragment + relative_path = absolute_path
  string root_execution_path_fragment = 4;
  // whether this artifact comes from an external repository (bazel only)
  bool is_external = 5;

  // The contents of relative_path and root_execution_path_fragment have changed
  // for external workspaces. This is a temporary field to distinguish between
  // the two versions.
  bool is_new_external_version = 6;
}